--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/AdminForm/AdminJFrame.java=UTF-8
+encoding//src/DAO/SanPhamDAO.java=UTF-8
 encoding//src/Login/ChangePassJDialog.java=UTF-8
 encoding//src/Login/LoginJDialog.java=UTF-8
 encoding//src/NhanVienForm/NhanVienJFrame.java=UTF-8
