--- a/.classpath
+++ b/.classpath
@@ -11,7 +11,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/LIB Java JAR/IText/itext-5.0.5.jar">
+	<classpathentry kind="lib" path="lib/itext-5.0.5.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
